<resources>
    <string name="app_name">My_Notes</string>
    <string name="title">title</string>
    <string name="text">text</string>
    <string name="data">data</string>
    <string name="match_search">Match search</string>
    <string name="data_min">Data min</string>
    <string name="data_max">Data max</string>
    <string name="deselect">✕</string>
    <string name="chosen">"Chosen - "</string>

    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--    <string name="action_settings">Settings</string>-->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="note_folders">Note folders</string>
    <string name="clear_history">Clear history</string>

    <string name="save_to_default_older">Save to_default older</string>
    <string name="save_to_folder_of_choice">Save to folder of choice</string>
    <string name="save_to_new_folder">Save to new folder</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uncategorized">Без категории</string>
    <string name="delete_selected_notes">Delete</string>
    <string name="move">Move</string>
    <string name="choose_an_icon">choose an icon</string>
    <string name="Enter_folder_name">Enter folder name</string>
    <string name="note_save">note save</string>
    <string name="save_as">save as</string>
    <string name="tools">Tools</string>
    <string name="add_folder">add folder</string>
    <string name="delete_folder">delete folder</string>
    <string name="folder_notes">folder notes</string>
    <string name="delete">✕</string>
    <string name="select_objects">select objects</string>
    <string name="you_have_no_notes">You have no notes</string>
    <string name="create_new_folder">create a new folder</string>
    <string name="no_folders_to_save"><b><u>NO FOLDERS TO SAVE</u></b></string>
    <string name="save_new_folder">save new folder</string>
    <string name="delete_everything">delete everything</string>

    <string name="first_item">Первый пункт</string>
    <string name="second_item">Второй пункт</string>
    <string name="third_item">Третий пункт</string>
    <string name="delete_folder_2">delete folder</string>
    <string name="all_notes">all notes</string>
    <string name="load_pap">Load pap</string>
    <string name="load_notes">Load notes</string>
    <string name="load_notes_fir">Load notes fir</string>

</resources>
