<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/add_folder"
                android:icon="@drawable/ic_baseline_create_new_folder_24"
                android:title="@string/add_folder"
                app:showAsAction="always|collapseActionView" />
            <item
                android:id="@+id/delete_folder"
                android:icon="@drawable/ic_baseline_folder_delete_24"
                android:title="@string/delete_folder"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/search_nav_list"
                android:title="@string/search"
                app:actionViewClass="android.widget.SearchView"
                app:showAsAction="ifRoom|collapseActionView" />
        </menu>
    </item>
    <group
        android:id="@+id/group"
        android:checkableBehavior="single"
        android:title="@string/folder_notes"
        app:showAsAction="ifRoom" />
</menu>