<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    android:paddingHorizontal="15dp"
    android:paddingTop="8dp"
    tools:context=".ui.detail.NotesSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/data_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/data_min"
            android:paddingStart="8dp"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@id/search_text_view"
            app:layout_constraintEnd_toStartOf="@id/data_max"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/data_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/data_max"
            android:paddingStart="8dp"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="@id/data_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/data_min"
            app:layout_constraintTop_toTopOf="@id/data_min"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_search_24"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="@id/search_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_text_view"
            app:layout_constraintTop_toTopOf="@id/search_text_view" />

        <EditText
            android:id="@+id/search_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/match_search"
            android:paddingStart="8dp"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/data_min" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/deselect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/deselect"
            android:gravity="center"
            android:background="@color/grey"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <TextView
            android:id="@+id/counter_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textSize="24sp"
            android:text="@string/chosen"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/select_notes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/grey"
            android:layout_weight="1"/>

    </LinearLayout>
</FrameLayout>