<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_bg"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/note_detail_toolbar">

    <EditText
        android:id="@+id/title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="@dimen/text_size_date_3"
        app:layout_constraintBottom_toTopOf="@id/data_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data"
        android:textSize="@dimen/text_size_date_2"
        app:layout_constraintBottom_toTopOf="@+id/text_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_detail" />

    <EditText
        android:id="@+id/text_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints="name"
        android:gravity="top"
        android:hint="@string/text"
        android:inputType="text"
        android:textSize="@dimen/text_size_date_3"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_detail" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/side_nav_bar"
        app:menu="@menu/menu_bottom_detail"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_detail" />
</androidx.constraintlayout.widget.ConstraintLayout>